# made-1_cpp-hw

.github/workflows/: ci.yml
hw1/: CMakeLists.txt  linters.sh  test_coverage.sh  test_sanitizers.sh  test_valgrind.sh
hw1/lib/: CMakeLists.txt  body.c  car.c  io.c
hw1/lib/include/: body.h  car.h  io.h
hw1/tests/: CMakeLists.txt  body.cpp  car.cpp  io.cpp
hw2/: broadcast.cpp  matrix.cpp  stack_impl.h
hw2/include/: broadcast.h  matrix.h  stack.h  stack_impl.h
hw2/src/: matrix.cpp
hw2/tests/: CMakeLists.txt  matrix.cpp
hw4/: CMakeLists.txt  main.cpp
hw4/parallel_shared_lib/: CMakeLists.txt
hw4/parallel_shared_lib/include/: count.h
hw4/parallel_shared_lib/src/: count.cpp
hw4/parallel_shared_lib/tests/: CMakeLists.txt  count.cpp
hw4/scripts/: check.sh  stress_test.sh  test_coverage.sh
hw4/sequential_static_lib/: CMakeLists.txt
hw4/sequential_static_lib/include/: count.h
hw4/sequential_static_lib/src/: count.cpp
hw4/sequential_static_lib/tests/: CMakeLists.txt  count.cpp
